# btmgmt

./: Cargo.toml  README.md
.github/workflows/: tests.yml
btmgmt/: Cargo.toml
btmgmt-cli/: Cargo.toml
btmgmt-cli/src/: main.rs
btmgmt-packet/: Cargo.toml
btmgmt-packet/macros/src/: commands.rs  events.rs  lib.rs  pack.rs  unpack.rs
btmgmt-packet/tests/: all.rs  commands.rs  events.rs  standard-struct.rs  tuple-struct.rs  unit-enum.rs  unit-struct.rs
btmgmt/examples/: simple.rs
btmgmt/src/: client.rs  client2.rs  lib.rs  pack.rs  packet.rs  sock.rs
btmgmt/src/packet/: command.rs  event.rs
btmgmt/src/packet/command/: impl_from_iter.rs  impl_into_iter.rs
btmgmt/src/packet/event/: impl_into_iter.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: listen.rs  simple.rs
packet/: Cargo.toml
packet/helper/: Cargo.toml
packet/helper/src/: lib.rs  pack.rs
packet/helper/src/pack/: imp.rs
packet/helper/tests/: all.rs  bitflags.rs  commands.rs  events.rs  iter_newtype.rs  iter_newtype_generics.rs  iter_newtype_hashset.rs  newtype.rs  standard-struct.rs  tuple-struct.rs  unit-enum.rs  unit-struct.rs
packet/macros/: Cargo.toml
packet/macros/src/: commands.rs  events.rs  iter_newtype.rs  lib.rs  newtype.rs  pack.rs  unpack.rs
packet/src/: command.rs  event.rs  lib.rs
src/: client.rs  lib.rs  sock.rs
