[package]
name = "btmgmt"
version = "0.2.4"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Linux Management API Client"
repository = "https://github.com/yskszk63/btmgmt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
readme = "README.md"
resolver = "2"

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.8", features = ["net"] }
socket2 = { version = "0.4", features = ["all"] }
libc = "0.2"
thiserror = "1.0"
log = "0.4"
btmgmt-packet = { path = "packet", version = "0.2.4" }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.8", features = ["rt", "macros", "io-util"] }
pretty_env_logger = "0.4"
tokio-test = "0.4.2"

[workspace]
members = [
    "cli",
    "packet",
    "packet/macros",
    "packet/helper",
]
