[package]
name = "btmgmt-packet"
version = "0.1.0"
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
bdaddr = "0.1.1"
thiserror = "1.0.26"
btmgmt-packet-macros = { path = "macros" }

[dev-dependencies]
trybuild = "1.0.42"
