[package]
name = "btmgmt-cli"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Linux Management API Command Line Client"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[dependencies]
btmgmt = { path="..", version = "0.1.0" }
clap = "3.0.0-beta.2"
anyhow = "1.0"
tokio = { version="1.8", features=["rt", "macros"] }
pretty_env_logger = "0.4"
futures = "0.3.15"
