[package]
name = "btmgmt-cli"
version = "0.3.0-alpha.2"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Linux Management API Command Line Client"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[dependencies]
btmgmt = { path = "..", version = "0.3.0-alpha.2" }
clap = { version = "3.0.0-rc.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.13", features = ["rt", "macros"] }
pretty_env_logger = "0.4"
futures = "0.3"
