[package]
name = "btmgmt-packet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdaddr = "0.1.1"
thiserror = "1.0.26"
btmgmt-packet-helper = { path = "helper" }
bitflags = "1.2.1"
uuid = "0.8.2"
getset = "0.1.1"
derive-new = "0.5.9"
