[package]
name = "btmgmt-packet"
version = "0.3.0-alpha.1"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "btmgmt API packet structures."
repository = "https://github.com/yskszk63/btmgmt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[dependencies]
bdaddr = "0.2.0-alpha.2"
thiserror = "1.0"
btmgmt-packet-helper = { path = "helper", version = "0.3.0-alpha.1" }
bitflags = "1.3"
uuid = "0.8"
getset = "0.1"
derive-new = "0.5"
smallvec = { version = "1.7", features = ["write"] }
