[package]
name = "btmgmt-packet-helper"
version = "0.1.0"
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
bdaddr = "0.1"
thiserror = "1.0"
btmgmt-packet-macros = { path = "../macros" }

[dev-dependencies]
bitflags = "1.2.1"
trybuild = "1.0"
