[package]
name = "btmgmt-packet-helper"
version = "0.2.4"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
autotests = false
description = "btmgmt-packet helper"
repository = "https://github.com/yskszk63/btmgmt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
thiserror = "1.0"
btmgmt-packet-macros = { path = "../macros", version = "0.2.4" }

[dev-dependencies]
bitflags = "1.2"
trybuild = "1.0"
