[package]
name = "btmgmt-packet-macros"
version = "0.3.0-alpha.3"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "btmgmt-packet helper macros."
repository = "https://github.com/yskszk63/btmgmt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit"] }
